--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div id="app"></div>
-    <script src="src/app.js"></script>
+    <script src="src/app.js" type="module"></script>
 </body>
 </html>
