--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turrrr</title>
+    <title>Sweet Player</title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <div id="app"></div>
+    <!-- <hello-world name="Oye"></hello-world> -->
+    <!-- <sweet-player></sweet-player> -->
     <script src="src/app.js" type="module"></script>
 </body>
 </html>
